VWA-MarkTest/src/objects/Accomplishment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acreage Impacted</fullName>
                </value>
                <value>
                    <fullName>Buckwheat Plants Removed</fullName>
                </value>
                <value>
                    <fullName>Buckwheat Plants Trimmed</fullName>
                </value>
                <value>
                    <fullName>Campsites Cleaned / Enhanced</fullName>
                </value>
                <value>
                    <fullName>Campsites Removed</fullName>
                </value>
                <value>
                    <fullName>Fire Permits Issued</fullName>
                </value>
                <value>
                    <fullName>LBS of Trash Removed</fullName>
                </value>
                <value>
                    <fullName>Logs Removed</fullName>
                </value>
                <value>
                    <fullName>Miles of Trail Monitored</fullName>
                </value>
                <value>
                    <fullName>Structures Built</fullName>
                </value>
                <value>
                    <fullName>Structures Maintained</fullName>
                </value>
                <value>
                    <fullName>Violations Observed</fullName>
                </value>
                <value>
                    <fullName>Visitor Contacts</fullName>
                </value>
                <value>
                    <fullName>Yards of Trail (Re)Constructed</fullName>
                </value>
                <value>
                    <fullName>Yards of Trail Brushed</fullName>
                </value>
                <value>
                    <fullName>Yards of Tread Maintained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <label>Volunteer Job</label>
        <referenceTo>GW_Volunteers__Volunteer_Job__c</referenceTo>
        <relationshipLabel>Accomplishments</relationshipLabel>
        <relationshipName>Accomplishments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Accomplishment</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Accomplishment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accomplishments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>